--- a/index.html
+++ b/index.html
@@ -16,7 +16,8 @@
     <title>Hello, world!</title>
   </head>
   <body>
-    <h1>Hello, world!</h1>
+    <h1>Oasis</h1>
+    <p class="lead">La culla del tuo futuro</p>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
