reso responsive footer

--- a/index.html
+++ b/index.html
@@ -17,22 +17,29 @@
   </head>
   <body>
     <header>
-      <h1>Oasis</h1>
+      <h1 class="display-1">Oasis</h1>
       <p class="lead">La culla del tuo futuro</p>
+      <button class="btn btn-primary">Unisciti a noi</button>
     </header>
     <main></main>
-    <div class="container">
-      <footer class="py-3 my-4">
-        <ul class="nav justify-content-center border-bottom pb-3 mb-3">
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Home</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Features</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">Pricing</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">FAQs</a></li>
-          <li class="nav-item"><a href="#" class="nav-link px-2 text-muted">About</a></li>
-        </ul>
-        <p class="text-center text-muted">&copy; 2021 Company, Inc</p>
-      </footer>
-    </div>
+
+    <footer>
+      <div class="container">
+        <div class="text-center">
+          <img src="" alt="" class="img-fluid" />
+        </div>
+        <nav>
+          <ul class="nav flex-column flex-md-row align-items-center justify-content-md-center border-bottom">
+            <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
+            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
+          </ul>
+        </nav>
+        <small class="text-center text-muted">&copy; Oasis Inc.</small>
+      </div>
+    </footer>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
