aggiunta bozza navbar

--- a/index.html
+++ b/index.html
@@ -17,6 +17,54 @@
   </head>
   <body>
     <header>
+      <nav class="navbar navbar-expand-lg navbar-dark bg-dark" aria-label="Fifth navbar example">
+        <div class="container-fluid">
+          <a class="navbar-brand" href="#">Expand at lg</a>
+          <button
+            class="navbar-toggler"
+            type="button"
+            data-bs-toggle="collapse"
+            data-bs-target="#navbarsExample05"
+            aria-controls="navbarsExample05"
+            aria-expanded="false"
+            aria-label="Toggle navigation"
+          >
+            <span class="navbar-toggler-icon"></span>
+          </button>
+
+          <div class="collapse navbar-collapse" id="navbarsExample05">
+            <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+              <li class="nav-item">
+                <a class="nav-link active" aria-current="page" href="#">Home</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link" href="#">Link</a>
+              </li>
+              <li class="nav-item">
+                <a class="nav-link disabled">Disabled</a>
+              </li>
+              <li class="nav-item dropdown">
+                <a
+                  class="nav-link dropdown-toggle"
+                  href="#"
+                  id="dropdown05"
+                  data-bs-toggle="dropdown"
+                  aria-expanded="false"
+                  >Dropdown</a
+                >
+                <ul class="dropdown-menu" aria-labelledby="dropdown05">
+                  <li><a class="dropdown-item" href="#">Action</a></li>
+                  <li><a class="dropdown-item" href="#">Another action</a></li>
+                  <li><a class="dropdown-item" href="#">Something else here</a></li>
+                </ul>
+              </li>
+            </ul>
+            <form>
+              <input class="form-control" type="text" placeholder="Search" aria-label="Search" />
+            </form>
+          </div>
+        </div>
+      </nav>
       <h1 class="display-1">Oasis</h1>
       <p class="lead">La culla del tuo futuro</p>
       <button class="btn btn-primary">Unisciti a noi</button>
@@ -28,16 +76,16 @@
         <div class="text-center">
           <img src="" alt="" class="img-fluid" />
         </div>
-        <nav>
-          <ul class="nav flex-column flex-md-row align-items-center justify-content-md-center border-bottom">
-            <li class="nav-item"><a href="#" class="nav-link">Home</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Features</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">Pricing</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">FAQs</a></li>
-            <li class="nav-item"><a href="#" class="nav-link">About</a></li>
-          </ul>
+        <nav class="nav flex-column flex-md-row align-items-center justify-content-md-center">
+          <a class="nav-link" href="#">Home</a>
+          <a class="nav-link" href="#">Descrizione</a>
+          <a class="nav-link" href="#">Quartieri</a>
+          <a class="nav-link" href="#">Servizi</a>
+          <a class="nav-link" href="#">Eventi</a>
+          <a class="nav-link" href="#">Unisciti a noi</a>
         </nav>
-        <small class="text-center text-muted">&copy; Oasis Inc.</small>
+        <hr class="" />
+        <small class="text-centred text-muted">&copy; Oasis Inc.</small>
       </div>
     </footer>
 
