--- a/index.html
+++ b/index.html
@@ -12,11 +12,12 @@
       integrity="sha384-1BmE4kWBq78iYhFldvKuhfTAU6auU8tT94WrHftjDbrCEXSU1oBoqyl2QvZ6jIW3"
       crossorigin="anonymous"
     />
+    <link rel="stylesheet" href="style.css" />
 
     <title>Oasis | Homepage</title>
   </head>
-  <body class="mt-3 pt-3">
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+  <body>
+    <header class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
       <div class="container-fluid">
         <!-- Logo -->
         <a href="" class="navbar_brand">
@@ -35,7 +36,11 @@
         </button>
 
         <!-- Menu -->
-        <div class="offcanvas bg-dark offcanvas-end" id="offcanvasNavbar">
+        <nav
+          class="offcanvas bg-dark offcanvas-end"
+          tabindex="-1"
+          id="offcanvasNavbar"
+        >
           <div class="offcanvas-header justify-content-end">
             <button
               type="button"
@@ -74,29 +79,41 @@
               </li>
             </ul>
           </div>
-        </div>
+        </nav>
       </div>
-    </nav>
-
-    <header>
-      <h1 class="display-1">Oasis</h1>
-      <p class="lead">La culla del tuo futuro</p>
-      <button class="btn btn-primary">Unisciti a noi</button>
     </header>
 
-    <main></main>
-
-    <footer>
-      <div class="container">
+    <main>
+      <section
+        class="
+          hero
+          d-flex
+          flex-column
+          justify-content-center
+          align-items-center
+          text-white
+        "
+        id="hero-home"
+      >
+        <h1>Oasis</h1>
+        <p class="lead">La culla del tuo futuro</p>
+        <button class="btn btn-primary">Unisciti a noi</button>
+      </section>
+    </main>
+    <div class="container">
+      <footer>
+        <!-- Logo -->
         <div class="text-center">
           <img src="" alt="" class="img-fluid" />
         </div>
+        <!-- Links -->
         <nav
           class="
             nav
             flex-column flex-md-row
             align-items-center
             justify-content-md-center
+            border-bottom border-primary
           "
         >
           <a class="nav-link" href="#">Home</a>
@@ -106,10 +123,10 @@
           <a class="nav-link" href="#">Eventi</a>
           <a class="nav-link" href="#">Unisciti a noi</a>
         </nav>
-        <hr class="" />
-        <small class="text-centred text-muted">&copy; Oasis Inc.</small>
-      </div>
-    </footer>
+        <!-- Copyright -->
+        <p class="text-centred text-muted">&copy; Oasis Inc.</p>
+      </footer>
+    </div>
 
     <!-- Optional JavaScript; choose one of the two! -->
 
