--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
         id="hero-home"
       >
         <h1>Oasis</h1>
-        <p class="lead">La culla del tuo futuro</p>
+        <h2 class="lead">La culla del tuo futuro</h2>
         <button class="btn btn-primary">Unisciti a noi</button>
       </section>
     </main>
