overwritten default styles

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 		<header class="navbar navbar-expand-lg navbar-dark bg-transparent fixed-top link-white">
 			<div class="container-fluid">
 				<!-- Logo -->
-				<a href="" class="navbar_brand">
+				<a href="" class="mx-3 navbar_brand">
 					<svg width="32" height="32" viewBox="0 0 32 32" fill="none" xmlns="http://www.w3.org/2000/svg">
 						<g clip-path="url(#clip0_792_14387)">
 							<g clip-path="url(#clip1_792_14387)">
@@ -60,27 +60,27 @@
 					<div class="offcanvas-header justify-content-end">
 						<button type="button" class="btn-close btn-close-white text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
 					</div>
-					<div class="offcanvas-body">
+					<div class="offcanvas-body justify-content-lg-center">
 						<ul class="navbar-nav">
-							<li class="nav-item">
+							<li class="nav-item mx-lg-3">
 								<a href="" class="nav-link">Descrizione</a>
 							</li>
-							<li class="nav-item">
+							<li class="nav-item mx-lg-3">
 								<a href="" class="nav-link">Quartieri</a>
 							</li>
-							<li class="nav-item dropdown">
+							<li class="nav-item mx-lg-3 dropdown">
 								<a href="" class="nav-link dropdown-toggle" data-bs-toggle="dropdown">Servizi</a>
-								<ul class="dropdown-menu dropdown-menu-dark">
+								<ul class="dropdown-menu px-3">
 									<li><a href="" class="dropdown-item">Generale</a></li>
 									<li><hr class="dropdown-divider" /></li>
 									<li><a href="" class="dropdown-item">Istruzione</a></li>
 									<li><a href="" class="dropdown-item">Benessere</a></li>
 								</ul>
 							</li>
-							<li class="nav-item">
+							<li class="nav-item mx-lg-3">
 								<a href="" class="nav-link">Eventi</a>
 							</li>
-							<li class="nav-item">
+							<li class="nav-item mx-lg-3">
 								<a href="" class="nav-link">Unisciti a noi</a>
 							</li>
 						</ul>
@@ -90,10 +90,12 @@
 		</header>
 
 		<main>
-			<section class="hero d-flex flex-column justify-content-center align-items-center text-white" id="hero-home">
-				<h1>Oasis</h1>
-				<h2 class="lead">La culla del tuo futuro</h2>
-				<button class="btn btn-primary">Unisciti a noi</button>
+			<section class="hero d-flex justify-content-center align-items-center" id="hero-home">
+				<div class="hero-content text-light text-center">
+					<h1 class="display-1">Oasis</h1>
+					<h2 class="lead">La culla del tuo futuro</h2>
+					<button class="btn btn-primary mt-3">Unisciti a noi</button>
+				</div>
 			</section>
 		</main>
 
@@ -133,7 +135,7 @@
 				<a class="nav-link" href="#">Unisciti a noi</a>
 			</nav>
 			<!-- Copyright -->
-			<p class="text-center text-white py-3">&copy; Oasis Inc.</p>
+			<p class="small text-center text-light py-3">&copy; Oasis Inc.</p>
 		</footer>
 
 		<!-- Option 1: Bootstrap Bundle with Popper -->
