--- a/index.html
+++ b/index.html
@@ -144,5 +144,22 @@
 			integrity="sha384-ka7Sk0Gln4gmtz2MlQnikT1wXgYsOg+OMhuP+IlRH9sENBO0LRn5q+8nbTov4+1p"
 			crossorigin="anonymous"
 		></script>
+		<script>
+			let navbar = document.querySelector("header");
+			let navbarExpanded = document.querySelector(".navbar-expand-lg .offcanvas");
+			window.addEventListener("scroll", (e) => {
+				e.preventDefault();
+
+				if (window.scrollY >= 100) {
+					navbar.classList.remove("bg-transparent");
+					navbar.classList.add("bg-dark");
+					// navbarExpanded.classList.toggle("scrolled");
+				} else {
+					navbar.classList.add("bg-transparent");
+					navbar.classList.remove("bg-dark");
+					// navbarExpanded.classList.toggle("scrolled");
+				}
+			});
+		</script>
 	</body>
 </html>
