added pages, debug navbar in active state

--- a/benessere.html
+++ b/benessere.html
@@ -106,7 +106,7 @@
               <li class="nav-item mx-lg-3 dropdown">
                 <a
                   href="servizi.html"
-                  class="nav-link dropdown-toggle"
+                  class="nav-link active dropdown-toggle"
                   data-bs-toggle="dropdown"
                   >Servizi</a
                 >
@@ -121,7 +121,9 @@
                     >
                   </li>
                   <li>
-                    <a href="benessere.html" class="dropdown-item">Benessere</a>
+                    <a href="benessere.html" class="dropdown-item active"
+                      >Benessere</a
+                    >
                   </li>
                 </ul>
               </li>
