--- a/istruzione.html
+++ b/istruzione.html
@@ -106,7 +106,7 @@
               <li class="nav-item mx-lg-3 dropdown">
                 <a
                   href="servizi.html"
-                  class="nav-link dropdown-toggle"
+                  class="nav-link active dropdown-toggle"
                   data-bs-toggle="dropdown"
                   >Servizi</a
                 >
@@ -116,7 +116,7 @@
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
-                    <a href="istruzione.html" class="dropdown-item"
+                    <a href="istruzione.html" class="dropdown-item active"
                       >Istruzione</a
                     >
                   </li>
