--- a/quartieri.html
+++ b/quartieri.html
@@ -101,7 +101,7 @@
                 <a href="descrizione.html" class="nav-link">Descrizione</a>
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="quartieri.html" class="nav-link">Quartieri</a>
+                <a href="quartieri.html" class="nav-link active">Quartieri</a>
               </li>
               <li class="nav-item mx-lg-3 dropdown">
                 <a
