--- a/servizi.html
+++ b/servizi.html
@@ -106,13 +106,15 @@
               <li class="nav-item mx-lg-3 dropdown">
                 <a
                   href="servizi.html"
-                  class="nav-link dropdown-toggle"
+                  class="nav-link active dropdown-toggle"
                   data-bs-toggle="dropdown"
                   >Servizi</a
                 >
                 <ul class="dropdown-menu px-3">
                   <li>
-                    <a href="servizi.html" class="dropdown-item">Generale</a>
+                    <a href="servizi.html" class="dropdown-item active"
+                      >Generale</a
+                    >
                   </li>
                   <li><hr class="dropdown-divider" /></li>
                   <li>
