--- a/unisciti.html
+++ b/unisciti.html
@@ -129,7 +129,9 @@
                 <a href="eventi.html" class="nav-link">Eventi</a>
               </li>
               <li class="nav-item mx-lg-3">
-                <a href="unisciti.html" class="nav-link">Unisciti a noi</a>
+                <a href="unisciti.html" class="nav-link active"
+                  >Unisciti a noi</a
+                >
               </li>
             </ul>
           </div>
