--- a/descrizione.html
+++ b/descrizione.html
@@ -98,7 +98,9 @@
           <div class="offcanvas-body justify-content-lg-center">
             <ul class="navbar-nav">
               <li class="nav-item mx-lg-3">
-                <a href="descrizione.html" class="nav-link">Descrizione</a>
+                <a href="descrizione.html" class="nav-link active"
+                  >Descrizione</a
+                >
               </li>
               <li class="nav-item mx-lg-3">
                 <a href="quartieri.html" class="nav-link">Quartieri</a>
