--- a/eventi.html
+++ b/eventi.html
@@ -162,10 +162,16 @@
             <div class="row gy-5 justify-content-center">
               <div class="col-md-4">
                 <div class="card text-light h-100">
-                  <img src="img/placeholder-img.png" alt="" class="card-img" />
-                  <div class="card-img-overlay">
-                    <h3 class="card-title">Dolci per tutti</h3>
-                    <p class="card-text small">Tutti i giorni</p>
+                  <div class="position-relative">
+                    <img
+                      src="img/placeholder-img.png"
+                      alt=""
+                      class="card-img"
+                    />
+                    <div class="card-img-overlay">
+                      <h3 class="card-title">Dolci per tutti</h3>
+                      <p class="card-text small">Tutti i giorni</p>
+                    </div>
                   </div>
                   <div class="card-body d-flex flex-column text-dark">
                     <p class="card-text flex-grow-1">
@@ -173,16 +179,29 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Sacher, 7</div>
                     <div><i class="bi-watch"></i> 10:00 - 20:00</div>
-                    <button class="btn btn-primary mt-3">Prenota</button>
+                    <button
+                      class="btn btn-primary mt-3"
+                      type="button"
+                      data-bs-toggle="modal"
+                      data-bs-target="#mymodal"
+                    >
+                      Prenota
+                    </button>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="card text-light h-100">
-                  <img src="img/placeholder-img.png" alt="" class="card-img" />
-                  <div class="card-img-overlay">
-                    <h3 class="card-title">La tua arte</h3>
-                    <p class="card-text small">Tutti i giorni</p>
+                  <div class="position-relative">
+                    <img
+                      src="img/placeholder-img.png"
+                      alt=""
+                      class="card-img"
+                    />
+                    <div class="card-img-overlay">
+                      <h3 class="card-title">La tua arte</h3>
+                      <p class="card-text small">Tutti i giorni</p>
+                    </div>
                   </div>
                   <div class="card-body d-flex flex-column text-dark">
                     <p class="card-text flex-grow-1">
@@ -191,16 +210,24 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Monet, 3</div>
                     <div><i class="bi-watch"></i> 10:00 - 20:00</div>
-                    <button class="btn btn-primary mt-3">Prenota</button>
+                    <button class="btn btn-primary mt-3 type="button"
+                      data-bs-toggle="modal"
+                      data-bs-target="#mymodal"">Prenota</button>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="card text-light h-100">
-                  <img src="img/placeholder-img.png" alt="" class="card-img" />
-                  <div class="card-img-overlay">
-                    <h3 class="card-title">Assaggia tè</h3>
-                    <p class="card-text small">Tutti i martedì</p>
+                  <div class="position-relative">
+                    <img
+                      src="img/placeholder-img.png"
+                      alt=""
+                      class="card-img"
+                    />
+                    <div class="card-img-overlay">
+                      <h3 class="card-title">Assaggia tè</h3>
+                      <p class="card-text small">Tutti i martedì</p>
+                    </div>
                   </div>
                   <div class="card-body d-flex flex-column text-dark">
                     <p class="card-text flex-grow-1">
@@ -209,16 +236,24 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Zenzero, 14</div>
                     <div><i class="bi-watch"></i> 11:00</div>
-                    <button class="btn btn-primary mt-3">Prenota</button>
+                    <button class="btn btn-primary mt-3 type="button"
+                      data-bs-toggle="modal"
+                      data-bs-target="#mymodal"">Prenota</button>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="card text-light h-100">
-                  <img src="img/placeholder-img.png" alt="" class="card-img" />
-                  <div class="card-img-overlay">
-                    <h3 class="card-title">Karaoke</h3>
-                    <p class="card-text small">Tutti i giorni</p>
+                  <div class="position-relative">
+                    <img
+                      src="img/placeholder-img.png"
+                      alt=""
+                      class="card-img"
+                    />
+                    <div class="card-img-overlay">
+                      <h3 class="card-title">Karaoke</h3>
+                      <p class="card-text small">Tutti i giorni</p>
+                    </div>
                   </div>
                   <div class="card-body d-flex flex-column text-dark">
                     <p class="card-text flex-grow-1">
@@ -227,16 +262,24 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Abba, 21</div>
                     <div><i class="bi-watch"></i> 20:00 - 00:00</div>
-                    <button class="btn btn-primary mt-3">Prenota</button>
+                    <button class="btn btn-primary mt-3 type="button"
+                      data-bs-toggle="modal"
+                      data-bs-target="#mymodal"">Prenota</button>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="card text-light h-100">
-                  <img src="img/placeholder-img.png" alt="" class="card-img" />
-                  <div class="card-img-overlay">
-                    <h3 class="card-title">Pittura con noi</h3>
-                    <p class="card-text small">Tutti i sabati</p>
+                  <div class="position-relative">
+                    <img
+                      src="img/placeholder-img.png"
+                      alt=""
+                      class="card-img"
+                    />
+                    <div class="card-img-overlay">
+                      <h3 class="card-title">Pittura con noi</h3>
+                      <p class="card-text small">Tutti i sabati</p>
+                    </div>
                   </div>
                   <div class="card-body d-flex flex-column text-dark">
                     <p class="card-text flex-grow-1">
@@ -245,16 +288,24 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Giallo, 10</div>
                     <div><i class="bi-watch"></i> 11:00</div>
-                    <button class="btn btn-primary mt-3">Prenota</button>
+                    <button class="btn btn-primary mt-3 type="button"
+                      data-bs-toggle="modal"
+                      data-bs-target="#mymodal"">Prenota</button>
                   </div>
                 </div>
               </div>
               <div class="col-md-4">
                 <div class="card text-light h-100">
-                  <img src="img/placeholder-img.png" alt="" class="card-img" />
-                  <div class="card-img-overlay">
-                    <h3 class="card-title">Cascate di Oasis</h3>
-                    <p class="card-text small">Tutti i giorni</p>
+                  <div class="position-relative">
+                    <img
+                      src="img/placeholder-img.png"
+                      alt=""
+                      class="card-img"
+                    />
+                    <div class="card-img-overlay">
+                      <h3 class="card-title">Cascate di Oasis</h3>
+                      <p class="card-text small">Tutti i giorni</p>
+                    </div>
                   </div>
                   <div class="card-body d-flex flex-column text-dark">
                     <p class="card-text flex-grow-1">
@@ -263,7 +314,9 @@
                     </p>
                     <div><i class="bi-pin-angle-fill"></i> Via Monti</div>
                     <div><i class="bi-watch"></i> 24h</div>
-                    <button class="btn btn-primary mt-3">Prenota</button>
+                    <button class="btn btn-primary mt-3 type="button"
+                      data-bs-toggle="modal"
+                      data-bs-target="#mymodal"">Prenota</button>
                   </div>
                 </div>
               </div>
@@ -273,6 +326,36 @@
       </section>
     </main>
 
+    <div
+      class="modal fade"
+      id="mymodal"
+      tabindex="-1"
+      aria-labelledby="exampleModalLabel"
+      aria-hidden="true"
+    >
+      <div class="modal-dialog">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button
+              type="button"
+              class="btn-close"
+              data-bs-dismiss="modal"
+              aria-label="Close"
+            ></button>
+          </div>
+          <div class="modal-body">Prenotazione effettuata</div>
+          <div class="modal-footer">
+            <button
+              type="button"
+              class="btn btn-primary"
+              data-bs-dismiss="modal"
+            >
+              Close
+            </button>
+          </div>
+        </div>
+      </div>
+    </div>
     <footer class="bg-secondary px-5">
       <!-- Logo -->
       <div class="text-center py-3">
