added class mb-0 to copyright

--- a/benessere.html
+++ b/benessere.html
@@ -207,7 +207,7 @@
         <a class="nav-link" href="/unisciti.html">Unisciti a noi</a>
       </nav>
       <!-- Copyright -->
-      <p class="small text-center text-light py-3">&copy; Oasis Inc.</p>
+      <p class="small text-center text-light py-3 mb-0">&copy; Oasis Inc.</p>
     </footer>
 
     <!-- Option 1: Bootstrap Bundle with Popper -->
