--- a/index.html
+++ b/index.html
@@ -148,6 +148,259 @@
           <button class="btn btn-primary mt-3">Unisciti a noi</button>
         </div>
       </section>
+
+      <section>
+        <div class="container py-5">
+          <div class="row align-items-center gy-5 gx-5">
+            <div class="col-md text-center">
+              <img src="./img/placeholder-img.png" alt="" />
+            </div>
+            <div class="col-md">
+              <h2 class="text-secondary">Una nuova città</h2>
+              <p class="">
+                OASIS nasce dopo la disfatta del mondo. <br />L’uomo, avido e
+                sempre più desideroso del controllo, ha soffocato a poco a poco
+                il Pianeta. Noi siamo qui per proteggerti e prenderci cura di
+                te. Il nostro obiettivo principale è farti dimenticare il
+                passato e la catastrofe che ha distrutto il mondo e farti vivere
+                una nuova vita di benessere fisico e mentale. Che aspetti?
+                Unisciti a noi!
+              </p>
+              <div class="d-flex justify-content-end">
+                <a
+                  href="descrizione.html"
+                  class="link-secondary"
+                  style="text-decoration: none"
+                >
+                  Scopri la storia di Oasis
+                  <i class="bi-arrow-right text-primary fw-bold"></i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container py-5">
+          <h2 class="text-secondary">Scopri i quartieri di Oasis</h2>
+          <div class="container py-4">
+            <div class="row g-3">
+              <div
+                class="
+                  col-md-6
+                  d-flex
+                  flex-column flex-md-row
+                  justify-content-center
+                  align-items-center align-items-md-start
+                "
+              >
+                <img class="img-fluid p-3 py-md-0" src="/icons/techne.svg" />
+                <div class="d-flex flex-column align-items-center">
+                  <h3 class="align-self-md-start">Techne</h3>
+                  <p class="align-self-start">
+                    Il quartiere del pensiero razionale e della scienza:
+                    officine, aziende, industrie. Qui è dove costruiamo OASIS e
+                    progettiamo il suo futuro, ancora più grande
+                  </p>
+                </div>
+              </div>
+              <div
+                class="
+                  col-md-6
+                  d-flex
+                  flex-column flex-md-row
+                  justify-content-center
+                  align-items-center align-items-md-start
+                "
+              >
+                <img class="img-fluid p-3 py-md-0" src="/icons/sapientia.svg" />
+                <div class="d-flex flex-column align-items-center">
+                  <h3 class="align-self-md-start">Sapientia</h3>
+                  <p class="align-self-start">
+                    Conoscenza e sete di sapere. Dalle scuole elementari alle
+                    Università, offriamo ambienti stimolanti per tutti i generi
+                    di personalità e inclinazione.
+                  </p>
+                </div>
+              </div>
+
+              <div
+                class="
+                  col-md-6
+                  d-flex
+                  flex-column flex-md-row
+                  justify-content-center
+                  align-items-center align-items-md-start
+                "
+              >
+                <img class="img-fluid p-3 py-md-0" src="/icons/ars.svg" />
+                <div class="d-flex flex-column align-items-center">
+                  <h3 class="align-self-md-start">Ars</h3>
+                  <p class="align-self-start">
+                    L’arte e la bellezza sono nell’aria. Cinema, teatri, mostre
+                    e sale da concerti. Lascia che il tuo spirito si rilassi e
+                    dimentichi tutto di fronte alla bellezza
+                  </p>
+                </div>
+              </div>
+              <div
+                class="
+                  col-md-6
+                  d-flex
+                  flex-column flex-md-row
+                  justify-content-center
+                  align-items-center align-items-md-start
+                "
+              >
+                <img class="img-fluid p-3 py-md-0" src="/icons/gustibus.svg" />
+                <div class="d-flex flex-column align-items-center">
+                  <h3 class="align-self-md-start">Gustibus</h3>
+                  <p class="align-self-start">
+                    Il buon cibo è l’ingrediente perfetto per ritornare ad uno
+                    stile di vita appagante. Qui troverai le cucine di tutto il
+                    mondo. Ce n’è davvero per tutti i gusti
+                  </p>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex justify-content-end">
+            <a
+              href="quartieri.html"
+              style="text-decoration: none"
+              class="link-secondary"
+              >Scopri i quartieri di Oasis
+              <i class="bi-arrow-right text-primary fw-bold"></i>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section class="bg-secondary-variant1">
+        <div class="container text-light p-5">
+          <div class="text-nowrap overflow-auto composition-servizi">
+            <img
+              class="d-inline-block img-fluid"
+              src="./img/placeholder-img.png"
+              alt=""
+            />
+            <img
+              class="d-inline-block img-fluid"
+              src="./img/placeholder-img.png"
+              alt=""
+            />
+            <img
+              class="d-inline-block img-fluid"
+              src="./img/placeholder-img.png"
+              alt=""
+            />
+            <img
+              class="d-inline-block img-fluid"
+              src="./img/placeholder-img.png"
+              alt=""
+            />
+          </div>
+
+          <div class="d-flex flex-column align-items-center">
+            <h2 class="align-self-md-start">Servizi unici al mondo</h2>
+            <p class="align-self-md-start">
+              Terme e Università ecco perché dovresti scegliere noi. Siamo
+              differenti dalle altre città-stato.
+            </p>
+          </div>
+
+          <div class="d-flex align-items-center">
+            <i class="bi-arrow-right fw-bold p-3"></i>
+            <div>
+              <h3>Istruzione</h3>
+              <p>Sfoglia la nostra offerta formativa</p>
+            </div>
+          </div>
+
+          <div class="d-flex align-items-center">
+            <i class="bi-arrow-right fw-bold p-3"></i>
+            <div>
+              <h3>Benessere</h3>
+              <p>Esplora i nostri servizi termali</p>
+            </div>
+          </div>
+
+          <div class="d-flex justify-content-center justify-content-md-start">
+            <a href="servizi.html" class="btn btn-primary">Scopri</a>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container py-5">
+          <div class="d-flex justify-content-center">
+            <h2 class="text-secondary">I prossimi eventi</h2>
+          </div>
+          <div class="row gy-3 py-5">
+            <div class="col-md-4">
+              <div class="card text-light h-100">
+                <div class="position-relative">
+                  <img src="img/placeholder-img.png" alt="" class="card-img" />
+                  <div class="card-img-overlay">
+                    <h3 class="card-title">La tua arte</h3>
+                    <p class="card-text small">Tutti i giorni</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card text-light h-100">
+                <div class="position-relative">
+                  <img src="img/placeholder-img.png" alt="" class="card-img" />
+                  <div class="card-img-overlay">
+                    <h3 class="card-title">La tua arte</h3>
+                    <p class="card-text small">Tutti i giorni</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <div class="col-md-4">
+              <div class="card text-light h-100">
+                <div class="position-relative">
+                  <img src="img/placeholder-img.png" alt="" class="card-img" />
+                  <div class="card-img-overlay">
+                    <h3 class="card-title">La tua arte</h3>
+                    <p class="card-text small">Tutti i giorni</p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+          <div class="d-flex justify-content-end">
+            <a
+              href="eventi.html"
+              style="text-decoration: none"
+              class="link-secondary"
+              >Scopri gli ultimi eventi
+              <i class="bi-arrow-right text-primary fw-bold"></i>
+            </a>
+          </div>
+        </div>
+      </section>
+
+      <section class="bg-primary">
+        <div class="container py-5">
+          <div class="d-flex flex-column align-items-center">
+            <h2 class="text-light">Entra in Oasis</h2>
+            <p class="text-light py-3">Cosa aspetti?</p>
+            <a
+              href="unisciti.html"
+              style="text-decoration: none"
+              class="btn btn-secondary"
+            >
+              Unisciti a noi
+            </a>
+          </div>
+        </div>
+      </section>
     </main>
 
     <footer class="bg-secondary px-5">
