Aggiunto layout pagina descrizione

--- a/descrizione.html
+++ b/descrizione.html
@@ -145,9 +145,170 @@
         id="hero-home"
       >
         <div class="hero-content text-light text-center">
-          <h1 class="display-1">Oasis</h1>
-          <h2 class="lead">La culla del tuo futuro</h2>
-          <button class="btn btn-primary mt-3">Unisciti a noi</button>
+          <h1 class="visually-hidden">Descrizione</h1>
+          <h2 class="h1">
+            Quando la speranza muore, solo un’oasi può riportarti alla vita
+          </h2>
+          <h2 class="lead">Scopri la nostra storia</h2>
+        </div>
+      </section>
+
+      <section>
+        <div class="container py-5">
+          <div class="row align-items-md-center">
+            <div class="col-md-5 text-center">
+              <img class="img-fluid" src="img/Image350.png" alt="" />
+            </div>
+            <div
+              class="
+                col-md-2
+                pt-5 pt-md-0
+                align-self-md-stretch
+                d-md-flex
+                flex-md-column
+                align-items-md-center
+                justify-content-between
+              "
+            >
+              <h2>2020</h2>
+              <div class="d-none d-md-block text-center">
+                <img class="img-fluid" src="img/Line.svg" alt="" />
+              </div>
+            </div>
+            <div class="col-md-5">
+              <h3 class="h2">
+                Inizio della pandemia e tracollo della popolazione
+              </h3>
+              <p>
+                L'anno in cui tutto ha inizio: a febbraio esplode la pandemia da
+                Covid-19, e la popolazione inizia a diminuire. A nulla serve il
+                vaccino: le varianti sono infinite e il virus si diffonde
+                rapidamente grazie all'inquinamento atmosferico. Alcuni studiosi
+                illuminati iniziano ad implementare strategie di resilienza.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container py-5">
+          <div class="row flex-md-row-reverse align-items-md-center">
+            <div class="col-md-5 text-center">
+              <img class="img-fluid" src="img/Image350.png" alt="" />
+            </div>
+            <div
+              class="
+                col-md-2
+                pt-5 pt-md-0
+                align-self-md-stretch
+                d-md-flex
+                flex-md-column
+                align-items-md-center
+                justify-content-between
+              "
+            >
+              <h2>2030</h2>
+              <div class="d-none d-md-block text-center">
+                <img class="img-fluid" src="img/Line.svg" alt="" />
+              </div>
+            </div>
+            <div class="col-md-5">
+              <h3 class="h2">
+                Surriscaldamento globale. Gli ingegneri di Cupertino iniziano la
+                loro opera
+              </h3>
+              <p>
+                Le <strong> previsioni scientifiche </strong>si avverano in anticipo di
+alcuni anni. Le <strong></strong>temperature globali</strong> si alzano di 3 gradi
+centigradi e il surriscaldamento è irreversibile. Il clima è
+sempre più ingestibile: le estati sono aride, gli inverni
+glaciali. In primavera alcuni ingegneri di Cupertino si
+riuniscono per discutere di un <strong>progetto edilizio</strong>
+chiamato OASIS               </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container py-5">
+          <div class="row align-items-md-center">
+            <div class="col-md-5 text-center">
+              <img class="img-fluid" src="img/Image350.png" alt="" />
+            </div>
+            <div
+              class="
+                col-md-2
+                pt-5 pt-md-0
+                align-self-md-stretch
+                d-md-flex
+                flex-md-column
+                align-items-md-center
+                justify-content-between
+              "
+            >
+              <h2>2040</h2>
+              <div class="d-none d-md-block text-center">
+                <img class="img-fluid" src="img/Line.svg" alt="" />
+              </div>
+            </div>
+            <div class="col-md-5">
+              <h3 class="h2">
+                Temperature elevate,
+                aria pesante. Oasis
+                prende forma              </h3>
+              <p>
+                In dieci anni l'atmosfera diventa sempre più ricca di
+sostanze tossiche per l uomo. Molte città sono state
+decimate da malattie respiratorie dovute
+all'inquinamento o da tumori contratti a causa delle
+tossine nell'ambiente. Piccoli gruppi di persone
+decidono di migrare vicino alle fonti d'acqua. Inizia la
+costruzione di Oasis in un punto strategico: le uniche
+falde acquifere agibili nel mondo Occidentale.               </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <section>
+        <div class="container py-5">
+          <div class="row flex-md-row-reverse align-items-md-center">
+            <div class="col-md-5 text-center">
+              <img class="img-fluid" src="img/Image350.png" alt="" />
+            </div>
+            <div
+              class="
+                col-md-2
+                pt-5 pt-md-0
+                align-self-md-stretch
+                d-md-flex
+                flex-md-column
+                align-items-md-center
+                justify-content-between
+              "
+            >
+              <h2>2050</h2>
+              <div class="d-none d-md-block text-center">
+                <img class="img-fluid" src="img/Line.svg" alt="" />
+              </div>
+            </div>
+            <div class="col-md-5">
+              <h3 class="h2">
+                Oasis è pronta ad
+                ospitare
+                i nomadi del Mondo
+                Esterno              </h3>
+              <p>
+                Oasis viene completata. Il mondo esterno è ormai
+                popolato solo da nomadi in cerca di un rifugio. Esistono
+                anche altre città-stato, ma si trovano tutte a miglia di
+                distanza l'una dall'altra. Gli obiettivi della nostra città
+                sono di garantire un futuro alle prossime generazioni e
+                la rendere possibile la ripopolazione del pianeta              </p>
+            </div>
+          </div>
         </div>
       </section>
     </main>
